@@ -1,0 +1,1 @@
+[{"market_1": "ETC-USD", "market_2": "BTC-USD", "hedge_ratio": 0.0007445339540414, "z_score": 1.647475249306206, "half_life": 23.0, "order_id_m1": "4e5d799909311b218599a99a71170cd1cf5765c70604a6df23d5f4b6f423fef", "order_m1_size": "4.9", "order_m1_side": "SELL", "order_time_m1": "2023-03-30T16:55:42.539824", "order_id_m2": "55026fa3e16879f96460569aa2a8848f5b2746c4dd9311e63c8cb24a2c1a530", "order_m2_size": "0.0036", "order_m2_side": "BUY", "order_time_m2": "2023-03-30T16:56:03.875273", "pair_status": "LIVE", "comments": ""}, {"market_1": "COMP-USD", "market_2": "MATIC-USD", "hedge_ratio": 38.635050283608365, "z_score": 1.749619834990381, "half_life": 6.0, "order_id_m1": "4ed128184f5149b319390214f6c28ee563d622f511ceac59bb820e7294778b8", "order_m1_size": "2.37", "order_m1_side": "SELL", "order_time_m1": "2023-03-30T17:07:36.503939", "order_id_m2": "4a825ba6ccba9c2206dd10536419bffb16f985e2c0853b9c88a871a95b49155", "order_m2_size": "92", "order_m2_side": "BUY", "order_time_m2": "2023-03-30T17:07:58.371342", "pair_status": "LIVE", "comments": ""}, {"market_1": "DOGE-USD", "market_2": "ETH-USD", "hedge_ratio": 4.23054230254244e-05, "z_score": -1.5446312608285648, "half_life": 9.0, "order_id_m1": "6d02fb3004d57660d9a8d28a4da42cc6e3940613d1d23dd034a7f5dd60537ff", "order_m1_size": "1350", "order_m1_side": "BUY", "order_time_m1": "2023-03-30T17:33:07.214416", "order_id_m2": "2484742a92899dad4719acff884f18b52ae4dbe610fc4800f3f9cede111809d", "order_m2_size": "0.056", "order_m2_side": "SELL", "order_time_m2": "2023-03-30T17:33:28.690659", "pair_status": "LIVE", "comments": ""}, {"market_1": "CELO-USD", "market_2": "DOT-USD", "hedge_ratio": 0.1010969188064546, "z_score": -2.1479793477252347, "half_life": 18.0, "order_id_m1": "4e7a9047a754d415e5ea914bf9b24f76cd6d68ce53a161cc8e75122f17bf9cd", "order_m1_size": "156", "order_m1_side": "BUY", "order_time_m1": "2023-03-30T18:23:16.118349", "order_id_m2": "1631d71c3bc82bcf6419e4502d5f3d28dfdf8273375a305e9b669873f39ee1c", "order_m2_size": "16.3", "order_m2_side": "SELL", "order_time_m2": "2023-03-30T18:23:37.757285", "pair_status": "LIVE", "comments": ""}, {"market_1": "ENJ-USD", "market_2": "NEAR-USD", "hedge_ratio": 0.1989487343609771, "z_score": 2.2087214734685685, "half_life": 4.0, "order_id_m1": "595da6c01d9d200fe5292c7d8a4b9a9f1cc3d24d1ddf52183aabee826ea2a0c", "order_m1_size": "256", "order_m1_side": "SELL", "order_time_m1": "2023-03-30T18:29:25.736677", "order_id_m2": "5cd9a3c5976f95de651d7afae534cff6288b52e822535dfbfd027380d953052", "order_m2_size": "52.2", "order_m2_side": "BUY", "order_time_m2": "2023-03-30T18:29:47.703084", "pair_status": "LIVE", "comments": ""}]
