@@ -1,66 +1,65 @@
 ,base_market,quote_market,hedge_ratio,half_life
-0,SNX-USD,ICP-USD,0.5328437418403793,22.0
-1,SNX-USD,SUSHI-USD,2.434105430288133,9.0
-2,XTZ-USD,ICP-USD,0.22293096845206395,17.0
-3,XTZ-USD,ATOM-USD,0.09695985642710056,20.0
-4,ICP-USD,TRX-USD,79.23780141739195,19.0
-5,ICP-USD,MATIC-USD,4.556113044245114,5.0
-6,ETC-USD,BTC-USD,0.0007494793574231765,22.0
-7,ETC-USD,AVAX-USD,1.1930571811633617,7.0
-8,ETC-USD,ETH-USD,0.011548109313706464,11.0
-9,ZEC-USD,UMA-USD,17.349487531106956,7.0
-10,ZEC-USD,ETH-USD,0.020485601743682327,9.0
-11,LINK-USD,BTC-USD,0.0002629247144660912,20.0
-12,BCH-USD,TRX-USD,1957.9115099611631,14.0
-13,BCH-USD,NEAR-USD,63.79921555772887,8.0
-14,BCH-USD,CRV-USD,133.82205535625963,10.0
-15,BCH-USD,AAVE-USD,1.6949161845872638,9.0
-16,ENJ-USD,TRX-USD,6.100716543015439,17.0
-17,ENJ-USD,COMP-USD,0.00909112097125081,4.0
-18,ENJ-USD,NEAR-USD,0.19883917198209275,4.0
-19,RUNE-USD,ZRX-USD,6.108976554219739,8.0
-20,RUNE-USD,TRX-USD,21.48291744490205,12.0
-21,RUNE-USD,COMP-USD,0.03200344515455668,11.0
-22,RUNE-USD,NEAR-USD,0.6999563495466892,12.0
-23,RUNE-USD,CRV-USD,1.4682133324370639,15.0
-24,RUNE-USD,UNI-USD,0.22983728985074858,23.0
-25,RUNE-USD,1INCH-USD,2.739035687311151,9.0
-26,FIL-USD,TRX-USD,90.05649858028917,20.0
-27,ZRX-USD,DOT-USD,0.03722620830273646,10.0
-28,ZRX-USD,CRV-USD,0.24028247237476336,12.0
-29,ZRX-USD,UNI-USD,0.03761527905683916,17.0
-30,TRX-USD,YFI-USD,7.60649446160182e-06,14.0
-31,TRX-USD,COMP-USD,0.0014888689950635597,12.0
-32,TRX-USD,NEAR-USD,0.03255923578698845,16.0
-33,TRX-USD,ALGO-USD,0.30606658208600046,22.0
-34,TRX-USD,UMA-USD,0.03165701404939911,12.0
-35,TRX-USD,DOT-USD,0.010581674122121434,14.0
-36,TRX-USD,CRV-USD,0.06829529745071583,19.0
-37,TRX-USD,AAVE-USD,0.0008649647822419843,20.0
-38,TRX-USD,UNI-USD,0.010691408888470096,23.0
-39,TRX-USD,MATIC-USD,0.057448847797942515,14.0
-40,TRX-USD,1INCH-USD,0.1274055968103183,15.0
-41,TRX-USD,ETH-USD,3.7373699464104295e-05,23.0
-42,COMP-USD,NEAR-USD,21.869869502864066,5.0
-43,COMP-USD,UNI-USD,7.181413189190362,10.0
-44,EOS-USD,UMA-USD,0.5450611635599323,8.0
-45,EOS-USD,BTC-USD,4.1785506384037086e-05,18.0
-46,EOS-USD,SOL-USD,0.05324569535110852,15.0
-47,EOS-USD,ETH-USD,0.0006436340108714382,9.0
-48,XMR-USD,LTC-USD,1.7980605104786422,22.0
-49,UMA-USD,BTC-USD,7.659551784833452e-05,12.0
-50,UMA-USD,DOT-USD,0.333822496767729,11.0
-51,UMA-USD,CRV-USD,2.153701059305704,17.0
-52,UMA-USD,SOL-USD,0.09756165276954777,14.0
-53,UMA-USD,DOGE-USD,27.825834247137017,7.0
-54,UMA-USD,LTC-USD,0.023986597828242903,24.0
-55,UMA-USD,AAVE-USD,0.027273433957957373,20.0
-56,UMA-USD,UNI-USD,0.3371421720843042,20.0
-57,UMA-USD,MATIC-USD,1.81099279509451,20.0
-58,UMA-USD,1INCH-USD,4.019824709717112,11.0
-59,UMA-USD,AVAX-USD,0.12186067572390545,9.0
-60,UMA-USD,ETH-USD,0.0011799500411230116,6.0
-61,DOT-USD,UNI-USD,1.0103839574480418,18.0
-62,CRV-USD,UNI-USD,0.15653008686349734,8.0
-63,CRV-USD,1INCH-USD,1.8648480661304556,11.0
-64,DOGE-USD,ETH-USD,4.2390883708818815e-05,10.0
+0,SNX-USD,XTZ-USD,2.3585169929865675,18.0
+1,SNX-USD,ICP-USD,0.5286878615703365,19.0
+2,SNX-USD,BCH-USD,0.021356383504832047,21.0
+3,SNX-USD,COMP-USD,0.062310511924729105,23.0
+4,SNX-USD,SUSHI-USD,2.423864240734604,10.0
+5,SNX-USD,AAVE-USD,0.036252675441794543,19.0
+6,XTZ-USD,ICP-USD,0.22392725126988502,11.0
+7,XTZ-USD,ATOM-USD,0.09746106527870432,17.0
+8,XTZ-USD,BCH-USD,0.009052128109435478,11.0
+9,XTZ-USD,ENJ-USD,2.902861571872763,12.0
+10,XTZ-USD,TRX-USD,17.75130924934075,15.0
+11,XTZ-USD,COMP-USD,0.026405951670343403,10.0
+12,XTZ-USD,NEAR-USD,0.5775827482776784,11.0
+13,XTZ-USD,AAVE-USD,0.015358480044542442,12.0
+14,XTZ-USD,MATIC-USD,1.0202058803523135,11.0
+15,ICP-USD,TRX-USD,79.2437838257448,20.0
+16,ICP-USD,COMP-USD,0.11789790208452675,7.0
+17,ICP-USD,MATIC-USD,4.555691196361099,5.0
+18,ETC-USD,BTC-USD,0.0007445339540414708,23.0
+19,ETC-USD,AVAX-USD,1.1926018865160117,7.0
+20,ZEC-USD,UMA-USD,17.34480841423176,7.0
+21,LINK-USD,EOS-USD,6.29295707704686,8.0
+22,MKR-USD,ATOM-USD,59.667913647024655,21.0
+23,MKR-USD,FIL-USD,120.91501084887193,17.0
+24,CELO-USD,YFI-USD,7.273121437427764e-05,12.0
+25,CELO-USD,DOT-USD,0.10109691880645466,18.0
+26,CELO-USD,UNI-USD,0.10239981649033458,24.0
+27,CELO-USD,1INCH-USD,1.2116015859768285,14.0
+28,ENJ-USD,COMP-USD,0.009095053124036648,4.0
+29,ENJ-USD,NEAR-USD,0.19894873436097718,4.0
+30,RUNE-USD,ZRX-USD,6.097284015253113,7.0
+31,FIL-USD,TRX-USD,89.83456240603184,21.0
+32,ZRX-USD,DOT-USD,0.03730197485374762,10.0
+33,ZRX-USD,CRV-USD,0.24149119471716302,9.0
+34,ZRX-USD,1INCH-USD,0.447031737539761,12.0
+35,TRX-USD,COMP-USD,0.0014866414816132986,12.0
+36,TRX-USD,NEAR-USD,0.03251421050498271,17.0
+37,TRX-USD,DOT-USD,0.01054492352870042,13.0
+38,TRX-USD,CRV-USD,0.06825076335267793,20.0
+39,TRX-USD,AAVE-USD,0.0008645597431781532,22.0
+40,TRX-USD,UNI-USD,0.010680453996787624,23.0
+41,TRX-USD,MATIC-USD,0.057439714839458006,14.0
+42,YFI-USD,ALGO-USD,40041.40582227372,10.0
+43,YFI-USD,AVAX-USD,506.348980127048,15.0
+44,COMP-USD,MATIC-USD,38.635050283608365,6.0
+45,EOS-USD,BTC-USD,4.1586076445022436e-05,16.0
+46,EOS-USD,ETH-USD,0.0006436413555414588,9.0
+47,ALGO-USD,1INCH-USD,0.41574443341081724,14.0
+48,XMR-USD,LTC-USD,1.7916006810187615,20.0
+49,UMA-USD,BTC-USD,7.618688804508165e-05,11.0
+50,UMA-USD,DOT-USD,0.33470540879591704,11.0
+51,UMA-USD,CRV-USD,2.165903749948158,16.0
+52,UMA-USD,SOL-USD,0.09778135351381341,15.0
+53,UMA-USD,DOGE-USD,27.86901507784099,7.0
+54,UMA-USD,LTC-USD,0.023926994678100773,23.0
+55,UMA-USD,AAVE-USD,0.027429352999383705,20.0
+56,UMA-USD,UNI-USD,0.3388898923328938,20.0
+57,UMA-USD,MATIC-USD,1.8221956647754864,18.0
+58,UMA-USD,1INCH-USD,4.0107187672249385,13.0
+59,UMA-USD,AVAX-USD,0.12198672789310919,9.0
+60,UMA-USD,ETH-USD,0.0011793519798327038,6.0
+61,DOT-USD,UNI-USD,1.0129291809809882,19.0
+62,CRV-USD,UNI-USD,0.15647002367588617,7.0
+63,DOGE-USD,ETH-USD,4.23054230254244e-05,9.0
