@@ -5,11 +5,17 @@ from func_public import construct_market_prices
 from func_cointegration import store_cointegrated_results
 from func_entry_pairs import open_positions
 from func_exit_pairs import manage_trade_exits
+from func_messaging import send_message
 
 from pprint import pprint
 from prettyprinter import cpprint
 
+# MAIN FUNCTION
 if __name__ == "__main__":
+    
+    success = send_message("Effing work?")
+    print(success)
+    exit(1)
    
     # Connect to client
     try:
